chore: link glossary in docs
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/2025-01-02-5-ways-to-succeed.mdx
+++ b/src/content/blog/2025-01-02-5-ways-to-succeed.mdx
@@ -53,7 +53,7 @@ A consistent, and what many consider to be a software versioning best practice i
 Examples across varied environments of optimized packaging prepared for each potential target:
 
 - Use **multi-architecture Docker images** to support diverse systems.
-- Provide **metadata-rich Helm charts** with versioning and repository links for transparency.
+- Provide **metadata-rich [Helm charts](/glossary/helm-chart/)** with versioning and repository links for transparency.
 
 ### Cloud-Native Portability
 
@@ -61,14 +61,14 @@ Portability as mentioned before is hugely beneficial as application might be dyn
 
 - Externalize configurations using environment variables.
 - Treat backing services like databases as replaceable resources.
-- Offer deployment methods compatible with VMs, bare-metal, and Kubernetes.
+- Offer deployment methods compatible with VMs, bare-metal, and [Kubernetes](/glossary/kubernetes/).
 
 ### SBOM (Software Bill of Materials)
 
-Security is paramount in self-managed environments and any environment for that matter. So, generate an SBOM during building your application in your CI/CD pipeline to:
+Security is paramount in [self-managed](/glossary/self-managed-software/) environments and any environment for that matter. So, generate an [SBOM](/glossary/sbom-software-bill-of-materials/) during building your application in your CI/CD pipeline to:
 
 - Document dependencies and licensing for compliance.
-- Identify vulnerabilities through automated CVE scans.
+- Identify vulnerabilities through automated [CVE](/glossary/cve-common-vulnerabilities-and-exposures/) scans.
 - Build trust by providing customers with transparent software component details.
 
 ### Secure Base Images
