--- a/src/content/blog/distr-registry.mdx
+++ b/src/content/blog/distr-registry.mdx
@@ -28,7 +28,7 @@ import deployLogsDark from '../../assets/blog/2025-05-22-distr-registry/lw-deplo
 
 Today, we are happy to announce that the Distr [artifact registry](https://distr.sh/docs/product/registry/) is now Generally Available (GA).
 
-Manage and distribute container images, Helm charts, and other OCI artifacts with license-based access control, audit logs, and a visual UI that makes self-managed software distribution pretty darn simple if we do say so ourselves, built for both you and your customers.
+Manage and distribute container images, [Helm charts](/glossary/helm-chart/), and other [OCI artifacts](/glossary/oci-container-artifact-registry/) with license-based access control, audit logs, and a visual UI that makes [self-managed](/glossary/self-managed-software/) software distribution pretty darn simple if we do say so ourselves, built for both you and your customers.
 
 <hr />
 
@@ -69,10 +69,10 @@ Here are a few of its key features:
 
 ### OCI-compliant & format-flexible
 
-The registry supports any OCI artifact, including:
+The registry supports any [OCI artifact](/glossary/oci-container-artifact-registry/), including:
 
 - Docker images
-- Helm charts
+- [Helm charts](/glossary/helm-chart/)
 - WASM modules
 - Anything else that follows the OCI spec
 
