--- a/src/content/docs/docs/getting-started/core-concepts.mdx
+++ b/src/content/docs/docs/getting-started/core-concepts.mdx
@@ -13,10 +13,10 @@ Distr is built around several key concepts that work together to enable flexible
 
 Distr supports five distinct deployment models to meet different customer requirements:
 
-- **[Fully Self-Managed](/docs/use-cases/fully-self-managed/)**: For customers who maintain complete control over their infrastructure, the Distr [Artifact Registry](/docs/product/registry/) for artifact distribution is the main feature used.
+- **[Fully Self-Managed](/docs/use-cases/fully-self-managed/)**: For customers who maintain complete control over their infrastructure, the Distr [Artifact Registry](/glossary/oci-container-artifact-registry/) for artifact distribution is the main feature used.
 - **[Assisted Self-Managed](/docs/use-cases/assisted-self-managed/)**: End customers retain full control over their environment access but delegate application deployment to [Distr agents](/docs/product/agents/), which simplify initial installation, updates, and ongoing maintenance.
-- **[Bring Your Own Cloud (BYOC)](/docs/use-cases/byoc-bring-your-own-cloud/)**: Fully vendor-managed deployments within customer-owned environments. Ideal for end customers who want to offload infrastructure and software maintenance to the vendor while keeping deployments within their own environment, for compliance, cost management, or use of pre-contracted cloud resources.
-- **[Air-Gapped Environments](/docs/use-cases/air-gapped/)**: For high-security scenarios with physical or logical network isolation, offering secure artifact delivery through whitelisted connections, jump servers or physical media.
+- **[Bring Your Own Cloud (BYOC)](/glossary/byoc-definition/)**: Fully vendor-managed deployments within customer-owned environments. Ideal for end customers who want to offload infrastructure and software maintenance to the vendor while keeping deployments within their own environment, for compliance, cost management, or use of pre-contracted cloud resources.
+- **[Air-Gapped Environments](/glossary/air-gapped-meaning/)**: For high-security scenarios with physical or logical network isolation, offering secure artifact delivery through whitelisted connections, jump servers or physical media.
 - **[Edge Deployments](/docs/use-cases/edge-deployments/)**: For vendor-managed deployments to edge locations, IoT devices, or remote hardware.
 
 ## Key Components
@@ -34,9 +34,9 @@ It gives them control over deployments and access to the registry UI.
 
 ### Distr Registry
 
-[Distr Registry](/docs/product/registry/) is an OCI-compliant artifact registry that stores Docker images, Helm charts, and other OCI artifacts.
-It tracks artifact usage across customer environments and provides end customers with a private registry containing only the artifacts they’re licensed to use.
-Unlike other artifact registries, Distr’s includes a [UI](/docs/product/registry/) available in both the vendor and customer portals, making it easy to browse artifacts and inspect versions.
+[Distr Registry](/docs/product/registry/) is an [OCI-compliant artifact registry](/glossary/oci-container-artifact-registry/) that stores Docker images, [Helm charts](/glossary/helm-chart/), and other OCI artifacts.
+It tracks artifact usage across customer environments and provides end customers with a private registry containing only the artifacts they're licensed to use.
+Unlike other artifact registries, Distr's includes a [UI](/docs/product/registry/) available in both the vendor and customer portals, making it easy to browse artifacts and inspect versions.
 
 ### Distr Agents
 
