--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -18,8 +18,8 @@ import downloadDark from '~/assets/docs/product/registry/download-dark.png';
 import dashboardArtifactViewLight from '~/assets/docs/product/registry/dashboard-artifact-view-light.png';
 import dashboardArtifactViewDark from '~/assets/docs/product/registry/dashboard-artifact-view-dark.png';
 
-The Distr Artifact Registry is a built-in, [OCI-compliant](https://github.com/opencontainers/distribution-spec?tab=readme-ov-file) registry designed for AI and software companies
-to distribute Docker images and Helm Charts, SBOMs and other OCI artifacts to self-managed and BYOC environments.
+The Distr Artifact Registry is a built-in, [OCI-compliant](/glossary/oci-container-artifact-registry/) registry designed for AI and software companies
+to distribute Docker images and [Helm Charts](/glossary/helm-chart/), [SBOMs](/glossary/sbom-software-bill-of-materials/) and other OCI artifacts to [self-managed](/glossary/self-managed-software/) and [BYOC](/glossary/byoc-definition/) environments.
 It features advanced tag-based access and licensing controls.
 The registry also provides detailed download analytics that let you monitor which versions of your software are being used by each customer.
 
