--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -10,14 +10,14 @@ import ThemedImage from '~/components/util/ThemedImage.astro';
 import airgappedLight from '~/assets/docs/use-cases/airgapped/airgapped-light.png';
 import airgappedDark from '~/assets/docs/use-cases/airgapped/airgapped-dark.png';
 
-Distr supports air-gapped environments where strict security requirements demand physical or logical isolation from public networks.
+Distr supports [air-gapped](/glossary/air-gapped-meaning/) environments where strict security requirements demand physical or logical isolation from public networks.
 This deployment model is ideal for organizations in regulated industries, such as defense, finance, and critical infrastructure,
 where external connectivity or the use of agents is not permitted.
 
 Distr offers two approaches to support these environments:
 
 1. **IP Whitelisting**: For environments that can allow limited outbound connections.
-2. **Self-Managed Registry with Physical Transfers**: For fully isolated environments, Distr supports a workflow where updates are packaged, encrypted, and physically transferred (e.g., via USB or secure media).
+2. **[Self-Managed](/glossary/self-managed-software/) Registry with Physical Transfers**: For fully isolated environments, Distr supports a workflow where updates are packaged, encrypted, and physically transferred (e.g., via USB or secure media).
 
 ## Solution Architecture
 
