--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -16,7 +16,7 @@ import byocDark from '~/assets/docs/use-cases/byoc/byoc-dark.png';
   out to get early access.
 </Aside>
 
-Bring Your Own Cloud (BYOC) provides fully vendor-managed operations within customer-owned cloud resources.
+[Bring Your Own Cloud (BYOC)](/glossary/byoc-definition/) provides fully vendor-managed operations within customer-owned cloud resources.
 Perfect for organizations with strict data residency or compliance requirements that need to maintain ownership of their cloud infrastructure.
 
 After connecting the end customers cloud account to Distr, the required infrastructure will be provisioned using the Terraform agent.
