--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -10,9 +10,9 @@ import ThemedImage from '~/components/util/ThemedImage.astro';
 import fullySelfManagedLight from '~/assets/docs/use-cases/fully-self-managed/fully-self-managed-light.png';
 import fullySelfManagedDark from '~/assets/docs/use-cases/fully-self-managed/fully-self-managed-dark.png';
 
-The Fully Self-Managed deployment model is designed for environments where third-party access is not an option.
+The Fully [Self-Managed](/glossary/self-managed-software/) deployment model is designed for environments where third-party access is not an option.
 It is best suited for customers wanting to have full control over their infrastructure and don't want to use external agents.
-For this deployment model, Distr provides a [private artifact registry](/docs/product/registry/).
+For this deployment model, Distr provides a private [artifact registry](/glossary/oci-container-artifact-registry/).
 It comes with an [optimized UI](/docs/product/registry/#artifact-registry-ui) that enables customers
 to create access tokens, fetch the latest images and build custom automations on top of the registry.
 
