--- a/src/content/blog/container-image-registry-comparison.mdx
+++ b/src/content/blog/container-image-registry-comparison.mdx
@@ -361,14 +361,11 @@ Built for Independent Software Vendors (ISVs), B2B platforms, and enterprise sof
 - **For enterprises that use artifacts internally**:
   Choose **JFrog Artifactory** or **Harbor** for large organizations managing complex internal workflows.
   Both offer robust access controls, multi-format support, and policy enforcement for secure, large-scale internal use.
-
 - **SaaS vendors that only host at one cloud provider without self-managed support**:
   If your infrastructure runs in a specific cloud, consider the container registry your cloud provider offers.
-
 - **Non-commercial open source projects**:
   **GitHub Container Registry** and **Docker Hub** are ideal for distributing public artifacts to a wide audience with minimal setup.
   They're straightforward to adopt, work well with standard dev tooling, and are commonly known.
-
 - **Commercial open source projects and SaaS vendors that want to offer self-managed deployment options**:
-  **[Distr](https://distr.sh)** is built for software vendors distributing artifacts to external customer environments, including regulated, self-managed, or air-gapped deployments.
+  **[Distr](https://distr.sh/)** is built for software vendors distributing artifacts to external customer environments, including regulated, self-managed, or air-gapped deployments.
   It offers granular access controls, usage tracking, and flexible deployment models that internal or public registries can't deliver.
