chore: streamline discord url
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/2025-02-17-distr-v1-release.mdx
+++ b/src/content/blog/2025-02-17-distr-v1-release.mdx
@@ -39,7 +39,7 @@ This feature enables and simplifies the management of environment variables in y
 
 ![env-management](../../assets/blog/2025-02-17-distr-1-1-release/docker-env-management.png)
 
-Have questions or feedback? Share your thoughts on [Discord](https://discord.gg/STk5Z3nFmT) or join request a [demo call](https://cal.glasskube.com/team/gk/demo?duration=30) here!
+Have questions or feedback? Share your thoughts on [Discord](https://discord.gg/6qqBSAWZfW) or join request a [demo call](https://cal.glasskube.com/team/gk/demo?duration=30) here!
 
 ### Upgrading to v1.1
 
@@ -66,7 +66,7 @@ Would love to get your thoughts on the licensing feature and hear what else you 
 
 We'd love to hear your thoughts on this release! Share your feedback, ideas, or questions:
 
-- Join the [Discord server](https://discord.gg/STk5Z3nFmT)
+- Join the [Discord server](https://discord.gg/6qqBSAWZfW)
 - [Book a demo call](https://cal.glasskube.com/team/gk/demo?duration=30)
 - Reach out on [LinkedIn](https://www.linkedin.com/company/glasskube) or Twitter
 
