--- a/src/content/blog/2025-02-25-distr-v2-release.mdx
+++ b/src/content/blog/2025-02-25-distr-v2-release.mdx
@@ -70,7 +70,7 @@ If you don't already, be sure to follow us on LinkedIn to stay up to date on the
 
 We'd love to hear your thoughts on this release! Share your feedback, ideas, or questions:
 
-- Join the [Discord server](https://discord.gg/STk5Z3nFmT)
+- Join the [Discord server](https://discord.gg/6qqBSAWZfW)
 - [Book a demo call](https://cal.glasskube.com/team/gk/demo?duration=30)
 - Reach out on [LinkedIn](https://www.linkedin.com/company/glasskube)
 
