--- a/src/content/blog/distr-v1.4-release-post.mdx
+++ b/src/content/blog/distr-v1.4-release-post.mdx
@@ -90,7 +90,7 @@ Follow us on [LinkedIn](https://www.linkedin.com/company/glasskube) to stay up t
 
 We’d love to hear your thoughts on this release! Share your feedback, ideas, or questions:
 
-- Join the [Discord server](https://discord.gg/STk5Z3nFmT)
+- Join the [Discord server](https://discord.gg/6qqBSAWZfW)
 - [Book a demo call](https://cal.glasskube.com/team/gk/demo?duration=30)
 - Reach out on [LinkedIn](https://www.linkedin.com/company/glasskube) or [Twitter](https://twitter.com/glasskube)
 
