docs and website update: update domain references, add new documentation, and update pricing components

--- a/src/content/blog/distr-docs.mdx
+++ b/src/content/blog/distr-docs.mdx
@@ -282,7 +282,7 @@ we are happy with the decision to use Starlight for our technical documentation 
 We would like to get your opinion.
 Which of the two documentation frameworks do you prefer?
 
-- [`glasskube.dev`](https://glasskube.dev) built with Docusaurus
+- [`distr.sh`](https://distr.sh) built with Docusaurus
 - [`distr.sh`](https://distr.sh/docs/getting-started/what-is-distr/) built with Starlight
 
 P.S.: Read all our announcements of this week's launch week here: [`#distr-launch-week`](/blog/)
