--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -2,7 +2,7 @@
 title: Run Distr on macOS
 description: To run Distr on macOS, you need to configure Docker Desktop, reset the Docker context to default, and update your Docker config to avoid credential store issues.
 sidebar:
-  order: 6
+  order: 1
 ---
 
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
@@ -67,6 +67,7 @@ Check the current Docker context, run:
 docker context ls
 ```
 
+<Aside type="tip">
 Expected output:
 
 ```sh
@@ -80,6 +81,7 @@ If Docker is set to the `desktop-linux` context, you might encounter errors in t
 ```sh
 unable to get image 'postgres:17.3-alpine3.20': Cannot connect to the Docker daemon at unix:///Users/jakepage/.docker/run/docker.sock. Is the docker daemon running?
 ```
+</Aside>
 
 ## 3. Set the Docker Context to `default`
 
@@ -89,6 +91,7 @@ To switch the Docker context to `default`, run:
 docker context use default
 ```
 
+<Aside type="tip">
 Expected output:
 
 ```sh
@@ -96,6 +99,7 @@ NAME            DESCRIPTION                               DOCKER ENDPOINT       
 default *       Current DOCKER_HOST based configuration   unix:///var/run/docker.sock
 desktop-linux   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
 ```
+</Aside>
 
 ## 4. Update the Docker Config File
 
